# claude-code-practice

./: CLAUDE.md  README.md  detect.py  pyproject.toml
